--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "express": "~4.16.1",
     "googleapis": "^52.1.0",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
