--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "googleapis": "^52.1.0",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.9.23",
+    "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.4.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.0"
   }
 }
