--- a/client/plac/package.json
+++ b/client/plac/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "moment": "^2.28.0",
     "next": "9.5.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-big-calendar": "^0.28.0",
+    "react-dom": "16.13.1",
+    "react-hook-form": "^6.8.3",
+    "sass": "^1.26.11"
   }
 }
