--- a/client/plac/package.json
+++ b/client/plac/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_ENV='development' node server.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "http-proxy-middleware": "^1.0.5",
     "moment": "^2.28.0",
     "next": "9.5.3",
     "react": "16.13.1",
