--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-proxy-middleware": "^1.0.5",
     "moment": "^2.28.0",
     "next": "9.5.3",
+    "next-auth": "^3.1.0",
     "react": "16.13.1",
     "react-big-calendar": "^0.28.0",
     "react-dom": "16.13.1",
