Added loading popup when fetching data

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "16.13.1",
     "react-hook-form": "^6.8.3",
     "sass": "^1.26.11",
-    "swr": "^0.3.3"
+    "swr": "^0.3.3",
+    "unfetch": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
